# alt

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.json
.github/workflows/: ci.yml
cmake/: AltConfig.cmake.in  compiler_checks.cmake  coverage.cmake  sanitizers.cmake  warnings.cmake
docs/: algorithm.md  concepts.md  flags.md  functional.md  memory.md  scope.md  type_traits.md  utility.md
include/alt/: algorithm.hpp  concepts.hpp  flags.hpp  functional.hpp  memory.hpp  scope.hpp  type_traits.h  utility.h  utility.hpp  version.hpp
packaging/: build-deb.sh  control.in
scripts/: install-local.sh
src/: version.cpp
tests/: .clang-tidy  CMakeLists.txt  test_algorithm.cpp  test_clearing_string.cpp  test_flags.cpp  test_functional.cpp  test_memory.cpp  test_scope.cpp  test_type_traits.cpp  test_utility.cpp  test_version.cpp
